# filecoin-playground

./: .gitignore  README.md
contracts/applications/: upgradeable_proxy.sol
contracts/simple_examples/: bitwise_ops.sol  fallback.sol  function.sol  if_else.sol  library.sol
evm-interpreter-test/: Cargo.toml  solc_compile.sh  test.sh
evm-interpreter-test/contracts/applications/: bi-directional_payment.sol  deploy_any_contract.sol  simple_bytecode.sol
evm-interpreter-test/contracts/hacks/: accessing_private_data.sol
evm-interpreter-test/contracts/simple_examples/: abi_encode.sol  call.sol  enum.sol  import.sol  primitive_data_types.sol  unchecked_math.sol
evm-interpreter-test/src/: main.rs  mock_contract_vm.rs
evm-interpreter-test/test_vm/: Cargo.toml
evm-interpreter-test/test_vm/src/: lib.rs
fevm-tests/: Cargo.toml
fevm-tests/contracts/: IOTests.abi  IOTests.hex  IOTests.signatures  IOTests.sol
fevm-tests/src/: abi_utils.rs  io_tests_example.rs  main.rs  simple_recursive_example.rs  test_runner.rs  utils.rs  vm_utils.rs
fevm-tests/tests/: IOTests.json  Recursive.json
