[package]
name = "fevm-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
frc42_dispatch = { git = "https://github.com/filecoin-project/filecoin-actor-utils", branch = "feat/fvm-m2" }
frc46_token = { git = "https://github.com/filecoin-project/filecoin-actor-utils", branch = "feat/fvm-m2" }
fvm_actor_utils = { git = "https://github.com/filecoin-project/filecoin-actor-utils", branch = "feat/fvm-m2" }

[dependencies]
test_vm = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actors_runtime = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next", features = [ "test_utils" ] }
fil_actor_eam = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_evm = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fvm_shared = { version = "3.0.0-alpha.15", default-features = false }
fvm_ipld_blockstore = { version = "0.1.1", default-features = false }
fvm_ipld_encoding = { version = "0.3.2", default-features = false }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.48"
hex = "0.4.3"
num-traits = "0.2.14"
ethabi = "18.0.0"
anyhow = "1.0.44"
