[package]
name = "test_vm"
version = "10.0.0-alpha.1"
edition = "2021"

[lib]

[dependencies]
fil_builtin_actors_state = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actors_runtime = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next", features = [ "test_utils" ] }
fil_actor_init = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_cron = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_system = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_account = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_multisig = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_paych = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_reward = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_power = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_market = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_verifreg = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_miner = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_datacap = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_evm = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_eam = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }
fil_actor_ethaccount = { git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }

anyhow = "1.0.65"
bimap = { version = "0.6.2" }
blake2b_simd = "1.0"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
frc46_token = "3.0.0"
fvm_actor_utils = "2.0.0"
fvm_ipld_bitfield = "0.5.4"
fvm_ipld_blockstore = { version = "0.1.1", default-features = false }
fvm_ipld_encoding = { version = "0.3.2", default-features = false }
fvm_ipld_hamt = "0.6.1"
fvm_shared = { version = "3.0.0-alpha.15", default-features = false }
indexmap = { version = "1.8.0", features = ["serde-1"] }
integer-encoding = { version = "3.0.3", default-features = false }
lazy_static = "1.4.0"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
multihash = { version = "0.16.1", default-features = false }
test-case = "2.2.1"
ethers = { version = "0.17.0", features = ["abigen"] }
hex = "0.4.3"

[features]
m2-native = []
